--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Curiosidades de Tecnologia</h1>
-        <p>Tudo aqUilo que você sempre quis saber sobre o mundo Tech, em um unico lugar</p>
+        <p>Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um unico lugar</p>
     </header>
     <nav>
         <a href="#">Home</a>
